fixed spacing between sub categories in filter inline with checkboxes

--- a/client/src/styles/Filter.css
+++ b/client/src/styles/Filter.css
@@ -15,6 +15,7 @@ label {
   font-size: 1em;
   font-weight: bold;
   padding-left: 0.2em;
+  margin-top: -0.2em;
 }
 
 .sub-category {
